--- a/package.json
+++ b/package.json
@@ -12,9 +12,15 @@
   },
   "dependencies": {
     "@aws-amplify/ui-react": "^6.5.5",
+    "@emotion/react": "^11.14.0",
+    "@emotion/styled": "^11.14.1",
+    "@mui/icons-material": "^7.3.6",
+    "@mui/material": "^7.3.6",
     "aws-amplify": "^6.6.6",
-    "react": "^18.2.0",
-    "react-dom": "^18.2.0"
+    "react": "^18.3.1",
+    "react-dom": "^18.3.1",
+    "react-router-dom": "^6.30.2",
+    "rrule": "^2.8.1"
   },
   "devDependencies": {
     "@aws-amplify/backend": "^1.5.0",
